# ruby-xine

./: CMakeLists.txt
cmake/: FindRust.cmake
xine/: CMakeLists.txt  xine.rb
