PROJECT(ruby-xine)

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake ${CMAKE_MODULE_PATH})

SUBDIRS(xine)

FIND_PACKAGE(Rust REQUIRED)
FIND_PACKAGE(Xine REQUIRED)

INCLUDE_DIRECTORIES(${RUST_INCLUDE_PATH})

if ( NOT MSVC )
   set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden")
   ADD_DEFINITIONS(-DHAVE_VISIBILITY)
endif ( NOT MSVC )

