ADD_CUSTOM_COMMAND(
        OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/xine.cc
                ${CMAKE_CURRENT_BINARY_DIR}/xine.hh
        COMMAND ${RUBY_EXECUTABLE}
        ARGS -C${CMAKE_CURRENT_BINARY_DIR} -I${RUST_SOURCE_DIR}
                ${CMAKE_CURRENT_SOURCE_DIR}/xine.rb
        DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/xine.rb )

ADD_LIBRARY(xine MODULE ${CMAKE_CURRENT_BINARY_DIR}/xine.cc)
SET_TARGET_PROPERTIES(xine PROPERTIES PREFIX "")
TARGET_LINK_LIBRARIES(xine ${XINE_LIBRARY})

INSTALL(TARGETS xine DESTINATION ${RUBY_ARCH_DIR})
